fpp_parser/src/tests/illegal-character.ref.txt
 --> [ local path prefix ]/illegal-character.fpp:1:1
  |
1 | %
  | ^ syntax error: invalid character '%'

 --> [ local path prefix ]/illegal-character.fpp:2:1
  |
2 |     
  | ^^^^ syntax error: invalid character '\t'

 --> [ local path prefix ]/illegal-character.fpp:3:1
  |
3 | tok \     
  | ^^^ syntax error: module member expected
  |
  = note: expected one of type, array, constant, enum, struct, component, active, passive, queued, interface, module, port, state, topology, include, locate
  = note: got identifier

 --> [ local path prefix ]/illegal-character.fpp:4:8
  |
4 | tok2 \ illegal
  |        ^^^^^^^ syntax error: invalid token
  |
  = error: non whitespace character illegal after line continuation

